[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Love4Retro/love4retro.png" type="Texture" id=1]
[ext_resource path="res://scenes/Love4Retro/Love4Retro.gd" type="Script" id=2]
[ext_resource path="res://scenes/Love4Retro/dither_in.tres" type="Texture" id=3]

[node name="Love4Retro" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 96.0 ],
"_edit_vertical_guides_": [ 128.0 ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 128, 96 )
texture = ExtResource( 1 )

[node name="Fading" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = 256.0
margin_bottom = 192.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerIn" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="TimerIdle" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TimerOut" type="Timer" parent="."]
wait_time = 0.6
[connection signal="timeout" from="TimerIn" to="." method="_on_TimerIn_timeout"]
[connection signal="timeout" from="TimerIdle" to="." method="_on_TimerIdle_timeout"]
[connection signal="timeout" from="TimerOut" to="." method="_on_TimerOut_timeout"]
